# jdvlh-ia-game

./: .flake8  .gitignore  ANALYSE_CLINE.md  ANALYSE_COMPLETE_PROJET.md  ANALYSE_PROJET.md  DEMARRAGE_RAPIDE.md  Dockerfile.backend  Dockerfile.frontend  GIT_ANALYSIS.md  GUIDE_ACTION_RAPIDE.md  INDEX.md  INDEX_COMPLET.md  INTEGRATION_COMPLETE.md  INTEGRATION_PLAN.md  INTEGRATION_TASK.md  MATRICE_COMPARATIVE.md  MEMOIRE_CONTEXTUELLE.md  RAPPORT_FINAL.md  RAPPORT_PERFORMANCE.md  README.md  ROADMAP.md  commitlint.config.js  config.yaml  conftest.py  deploy.sh  docker-compose.yml  game_client.html  game_server.py  generate_reports.py  git-graph.txt  index.html  main.py  nginx.conf  package-lock.json  package.json  performance_dashboard.html  performance_monitor.py  project_dashboard.html  pyproject.toml  requirements.txt  (+3 more)
.husky/: commit-msg  post-commit  post-push  pre-commit  pre-push
data/: .gitignore
data/pf2e/: README.md
docs/: AMELIORATIONS_UI_INTERACTIVES.md  API.md  ARCHITECTURE.md  CHANGELOG.md  DEVELOPMENT.md  NEXT_SESSION_BRIEFING.md
docs/architecture/: MEMOIRE_CONTEXTUELLE.md
docs/guides/: DEMARRAGE_RAPIDE.md  GUIDE_ACTION_RAPIDE.md  GUIDE_JOUEUR_FR.md
docs/plans/: INDEX.md  INDEX_COMPLET.md  INTEGRATION_PLAN.md  INTEGRATION_TASK.md
jdvlh-frontend/: index.html  package-lock.json  package.json
scripts/: extract_pf2_translations.py  translate_pf2e_complete.py
tests/: test_character_progression.py  test_content_filter.py  test_game_entities.py  test_i18n.py  test_integration.py  test_performance.py  test_pf2e_content.py  test_services.py
(+65 files in other folders)
